--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,3 +1,14 @@
+{
+    "name": "C-System Accordion",
+    "short_name": "Accordion",
+    "start_url": "./index.html",
+    "display": "fullscreen",
+    "background_color": "#222222",
+    "theme_color": "#222222",
+    "icons": [
+        {
+            "src": "icon-192.png",
+            "sizes": "192x192",
             "type": "image/png"
         },
         {
